# mate-rov-2022

./: .gitmodules
common/: Cargo.toml
common/src/: controller.rs  crc.rs  lib.rs
controller/: controller.ino
controller-rust/: Cargo.toml  LICENSE  README.md
controller-rust/.cargo/: config.toml
controller-rust/src/: atomic.rs  buffer.rs  joystick.rs  main.rs  sabertooth.rs  spsc.rs  state.rs  time.rs
controller-rust/src/spsc/: atomic.rs  mod.rs  sealed.rs
frontend/: Cargo.toml  README.md
frontend/.cargo/: config.toml
frontend/calibrate/: Cargo.toml
frontend/calibrate/src/: main.rs
frontend/common/src/: vec.rs
frontend/cv/: Cargo.toml
frontend/cv/src/: dock.rs  handlers.rs  lib.rs  line_follower.rs  mosaic.rs  take_image.rs  up.rs
frontend/exec/: Cargo.toml
frontend/exec/src/: high_pass.rs  main.rs
frontend/mate-gui/: Cargo.toml
frontend/mate-gui/src/: gamepad.rs  main.rs  render3d.rs  robot.rs  ui.rs  utils.rs  video.rs
frontend/sensor-fusion/: Cargo.toml
frontend/sensor-fusion/src/: frame.rs  fusion.rs  lib.rs  state.rs
frontend/sensor_fusion/: Cargo.toml
frontend/sensor_fusion/src/: filter.rs  fusion.rs  lib.rs  state.rs
frontend/serial/: Cargo.toml
frontend/serial/src/: commands.rs  controller.rs  frame.rs  imu.rs  lib.rs  serial.rs
message-forwarder/: message-forwarder.ino
mort-ai/: .gitignore  README.md
mort-ai/model/: data.yaml
sensor-reader/: IMU.h  sensor-reader.ino
sensor_reader/: IMU.cpp  IMU.h  README.txt  sensor_reader.ino
