[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crc = "3.0.0"

[target.'cfg(target_arch = "avr")'.dependencies]
postcard = { version = "0.7.3", default-features = false }
postcard-cobs = { version = "0.1.5-pre", default-features = false }
serde = { version = "1.0.137", default-features = false, features = ["derive"] }

[target.'cfg(not(target_arch = "avr"))'.dependencies]
postcard = "0.7.3"
postcard-cobs = "0.1.5-pre"
serde = { version = "1.0.137", features = ["derive"] }