[package]
name = "controller-rust"
version = "0.1.0"
authors = ["Eoghanmc22 <eoghanmc@icloud.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "controller-rust"
test = false
bench = false

[dependencies]
common = { path = "../common" }
heapless = { version = "0.7.13", default-features = false }
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
avr-device = "0.3.3"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "d0d2f243bd3e10b49f6a78d44839a6caa8be7d43"
features = ["arduino-mega2560"]

[patch.crates-io]
heapless = { git = 'https://github.com/Eoghanmc22/heapless' }

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
