[package]
name = "controller-rust"
version = "0.1.0"
authors = ["Eoghanmc22 <eoghanmc@icloud.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
common = { path = "../common" }
heapless = { version = "0.7.13", default-features = false }
ufmt = "0.1.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
hash32 = "0.2.1"
avr-device = "0.3.3"

[dependencies.arduino-hal]
git = "https://github.com/Eoghanmc22/avr-hal"
branch = "branch"
features = ["arduino-mega2560"]

[dependencies.avr-hal-generic]
git = "https://github.com/Eoghanmc22/avr-hal"
branch = "branch"

[patch.crates-io]
heapless = { git = 'https://github.com/Eoghanmc22/heapless' }

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
