[package]
name = "calibrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
anyhow = "1.0.57"
serial = { path = "../serial" }
sensor_fusion = { path = "../sensor_fusion" }
glam = "0.20.5"