[package]
name = "cv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.63.1"
crossbeam = "0.8.1"
anyhow = "1.0.57"
common = { path = "../../common" }
sensor-fusion = { path = "../sensor-fusion" }
