[package]
name = "serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../common" }
sensor_fusion = { path = "../sensor_fusion" }
serialport = "4.1.0"
anyhow = "1.0.57"
crossbeam = "0.8.1"